@@ -1,4 +1,8 @@
 # Generated by h2py from /usr/include/sys/wait.h
+from warnings import warnpy3k
+warnpy3k("the WAIT module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
+
 _WSTOPPED = 0177
 WNOHANG = 0100
 WEXITED = 0001
