@@ -1,4 +1,7 @@
 # Generated by h2py from /usr/include/sys/wait.h
+from warnings import warnpy3k
+warnpy3k("the WAIT module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 # Included from standards.h
 def _W_INT(i): return (i)
